# FatFs

./: FatFsManager_en_150.ts  README.md  fileeditor.cpp  fileeditor.h  mainwindow.cpp
FATEditor/: CMakeLists.txt  FatFsManager1_en_150.ts  about.cpp  about.h  about.ui  bs_info.cpp  bs_info.h  bs_info.ui  edit_line.cpp  edit_line.h  edit_line.ui  fileeditor.cpp  fileeditor.h  fileeditor.ui  jump_to.cpp  jump_to.h  jump_to.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  root_dir.cpp  root_dir.h  root_dir.ui
First stage/: CMakeLists.txt  editor.cpp  editor.h  editor.ui  fileeditor.ui  mainwindow.h  mainwindow.ui
